--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# PORT=3000
-# MONGO_URI = mongodb://localhost:27017/BraveOn
-# JWT_SECRET= sasj&&^&%^&12
+PORT=3000
+MONGO_URI =mongodb+srv://amanrawat3021:aman123@cluster0.m3si1kh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=sasj&&^&%^&12
+NODE_ENV=development
